--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Hakar-thon of Zamfara, Kebbi, Sokoto, Liders pictures Gallery</h1><p><i class="gup">Developing by Haruna Lawali</i></p>
+        <h1>Welcome to Hacker-thon of Zamfara, Kebbi, Sokoto, Liders pictures Gallery</h1><p><i class="gup">Developing by Haruna Lawali</i></p>
         <p>
              <p><center style="color:#71ff6a;">3M<i style="color:green;">TT</i> </center></p>
         </p>
